--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             color: #0f0;
             text-shadow: 0 0 30px #0f0;
             letter-spacing: 5px;
+            transition: all 0.3s;
         }
 
         .prediction-period {
@@ -219,41 +220,209 @@
             cursor: not-allowed;
         }
 
-        /* VIP Hack Button */
+        /* VIP Hack Button - Hacker Style */
+        .vip-button-container {
+            margin-top: 30px;
+            text-align: center;
+            padding: 25px;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 8px;
+            border: 2px solid #0f0;
+            box-shadow: 
+                0 0 30px rgba(0, 255, 0, 0.3),
+                inset 0 0 30px rgba(0, 255, 0, 0.05);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .vip-button-container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(0, 255, 0, 0.1), transparent);
+            animation: scanLine 3s infinite;
+        }
+
+        @keyframes scanLine {
+            0% { left: -100%; }
+            100% { left: 100%; }
+        }
+
+        .vip-label {
+            color: #0f0;
+            font-size: 12px;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            text-shadow: 0 0 15px #0f0;
+            animation: hackBlink 1s infinite;
+            font-family: 'Courier New', monospace;
+        }
+
+        .vip-label::before {
+            content: '[';
+            color: #ff0;
+            margin-right: 5px;
+        }
+
+        .vip-label::after {
+            content: ']';
+            color: #ff0;
+            margin-left: 5px;
+        }
+
+        @keyframes hackBlink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; }
+        }
+
         .vip-button {
-            background: linear-gradient(135deg, #ff0000, #cc0000);
-            border: 2px solid #ff0000;
-            color: #fff;
-            padding: 15px 40px;
-            font-size: 20px;
+            background: rgba(0, 0, 0, 0.9);
+            border: 3px solid #0f0;
+            color: #0f0;
+            padding: 18px 50px;
+            font-size: 22px;
             font-weight: bold;
             font-family: 'Courier New', monospace;
-            border-radius: 8px;
+            border-radius: 5px;
             cursor: pointer;
             transition: all 0.3s;
-            box-shadow: 0 0 30px rgba(255, 0, 0, 0.5);
+            box-shadow: 
+                0 0 40px rgba(0, 255, 0, 0.6),
+                inset 0 0 20px rgba(0, 255, 0, 0.1);
             text-transform: uppercase;
-            letter-spacing: 3px;
+            letter-spacing: 6px;
             text-decoration: none;
-            display: inline-block;
-            margin: 20px auto;
+            display: inline-flex;
+            align-items: center;
+            gap: 15px;
+            animation: vipPulseHacker 2s infinite;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .vip-button::before {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            background: linear-gradient(45deg, #0f0, #0a0, #0f0, #ff0);
+            background-size: 400% 400%;
+            z-index: -1;
+            filter: blur(5px);
+            animation: glowingBorder 3s linear infinite;
+            opacity: 0.7;
+        }
+
+        @keyframes glowingBorder {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .vip-button::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
             width: 100%;
-            text-align: center;
-            animation: vipPulse 2s infinite;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(0, 255, 0, 0.4), transparent);
+            animation: hackSlide 2s infinite;
+        }
+
+        @keyframes hackSlide {
+            0% { left: -100%; }
+            100% { left: 100%; }
         }
 
         .vip-button:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 50px rgba(255, 0, 0, 0.8);
+            box-shadow: 
+                0 0 60px rgba(0, 255, 0, 1),
+                0 0 100px rgba(0, 255, 0, 0.5),
+                inset 0 0 30px rgba(0, 255, 0, 0.2);
+            border-color: #ff0;
+            color: #ff0;
+            text-shadow: 0 0 20px #ff0;
+            letter-spacing: 8px;
         }
 
-        @keyframes vipPulse {
+        .vip-button:hover .hack-bracket {
+            color: #f00;
+            text-shadow: 0 0 20px #f00;
+        }
+
+        .vip-button:active {
+            transform: scale(1.02);
+        }
+
+        @keyframes vipPulseHacker {
             0%, 100% {
-                box-shadow: 0 0 30px rgba(255, 0, 0, 0.5);
+                box-shadow: 
+                    0 0 40px rgba(0, 255, 0, 0.6),
+                    inset 0 0 20px rgba(0, 255, 0, 0.1);
             }
             50% {
-                box-shadow: 0 0 50px rgba(255, 0, 0, 0.9);
+                box-shadow: 
+                    0 0 60px rgba(0, 255, 0, 0.8),
+                    inset 0 0 30px rgba(0, 255, 0, 0.2);
             }
+        }
+
+        .hack-bracket {
+            color: #ff0;
+            font-size: 26px;
+            text-shadow: 0 0 15px #ff0;
+            animation: bracketPulse 1.5s infinite;
+        }
+
+        @keyframes bracketPulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+        }
+
+        .hack-text {
+            position: relative;
+            z-index: 1;
+        }
+
+        .vip-subtext {
+            color: #0f0;
+            font-size: 11px;
+            margin-top: 15px;
+            text-shadow: 0 0 10px rgba(0, 255, 0, 0.8);
+            animation: typing 4s steps(40) infinite;
+            font-family: 'Courier New', monospace;
+            letter-spacing: 2px;
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 2px solid #0f0;
+            display: inline-block;
+        }
+
+        @keyframes typing {
+            0%, 100% { width: 0; }
+            50% { width: 100%; }
+        }
+
+        .terminal-prompt {
+            color: #0a0;
+            font-size: 11px;
+            margin-bottom: 10px;
+            text-align: left;
+            font-family: 'Courier New', monospace;
+        }
+
+        .terminal-prompt::before {
+            content: 'root@predator:~$ ';
+            color: #0f0;
+            text-shadow: 0 0 5px #0f0;
         }
 
         /* History Section */
@@ -399,9 +568,16 @@
             <div id="historyList"></div>
         </div>
 
-        <a href="https://t.me/HGZYSignalXpert2" target="_blank" class="vip-button">
-            🔥 VIP HACK 🔥
-        </a>
+        <div class="vip-button-container">
+            <div class="terminal-prompt">ACCESS VIP SYSTEM</div>
+            <div class="vip-label">SYSTEM BREACH PROTOCOL</div>
+            <a href="https://t.me/HGZYSignalXpert2" target="_blank" rel="noopener noreferrer" class="vip-button">
+                <span class="hack-bracket">&lt;&lt;</span>
+                <span class="hack-text">VIP HACK</span>
+                <span class="hack-bracket">&gt;&gt;</span>
+            </a>
+            <div class="vip-subtext">JOIN_TELEGRAM_FOR_100%_ACCURACY</div>
+        </div>
     </div>
 
     <script>
@@ -515,31 +691,4 @@
             // Show next period
             const nextItem = document.createElement('div');
             nextItem.className = 'history-item next-period';
-            nextItem.innerHTML = `Next → <span class="period-num">Period ${currentPeriod}</span>`;
-            historyList.appendChild(nextItem);
-
-            // Show history
-            history.forEach(item => {
-                const historyItem = document.createElement('div');
-                historyItem.className = 'history-item';
-                const resultClass = item.result === 'BIG' ? 'result-big' : 'result-small';
-                historyItem.innerHTML = `<span class="period-num">Period ${item.period}</span> → <span class="${resultClass}">${item.result}</span>`;
-                historyList.appendChild(historyItem);
-            });
-        }
-
-        // Allow Enter key to start
-        document.getElementById('periodInput').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter' && !this.disabled) {
-                startPrediction();
-            }
-        });
-
-        // Window resize handler
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        });
-    </script>
-</body>
-</html>
+            ne
