--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@ button:disabled{opacity:.5;cursor:not-allowed}
 <h2 class="modal-title">SYSTEM ALERT</h2>
 </div>
 <div class="modal-body">
-<p class="message-text" id="notificationMessage">⚠️ সিস্টেম আপডেট চলছে। অনুগ্রহ করে কিছুক্ষণ অপেক্ষা করুন...</p>
+<p class="message-text" id="notificationMessage"> Dear User,
+This feature is available exclusively to new accounts. Please create a new account and follow the provided instructions to activate the benefit.
+Thank you,
+The Team https://dkwin9.com/#/register?invitationCode=35685100081 ...</p>
 <p class="timestamp" id="notificationTime">TIMESTAMP: LOADING...</p>
 <div class="data-stream" style="top:10px">01001000 01000001 01000011 01001011</div>
 <div class="data-stream" style="bottom:10px;animation-delay:2s">01010011 01011001 01010011 01010100</div>
