--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@ button:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(74,222,128,.5
 button:active{transform:translateY(0)}
 button:disabled{opacity:.5;cursor:not-allowed;transform:none}
 .btn-full{width:100%;padding:16px;font-size:16px}
-.prediction-box{position:relative;background:linear-gradient(135deg,rgba(74,222,128,.05) 0%,rgba(34,197,94,.1) 100%);border:3px solid #4ade80;border-radius:12px;padding:32px;margin-bottom:24px;box-shadow:0 0 40px rgba(74,222,128,.4)}
+.prediction-box{position:relative;background:linear-gradient(135deg,rgba(74,222,128,.05) 0%,rgba(34,197,94,.1) 100%);border:3px solid #4ade80;border-radius:12px;padding:24px 16px;margin-bottom:24px;box-shadow:0 0 40px rgba(74,222,128,.4);overflow:hidden}
 .corner{position:absolute;width:20px;height:20px;border:2px solid #86efac}
 .corner-tl{top:-2px;left:-2px;border-right:none;border-bottom:none}
 .corner-tr{top:-2px;right:-2px;border-left:none;border-bottom:none}
 .corner-bl{bottom:-2px;left:-2px;border-right:none;border-top:none}
 .corner-br{bottom:-2px;right:-2px;border-left:none;border-top:none}
 .prediction-content{text-align:center}
-.period-info{font-size:18px;font-weight:bold;margin-bottom:12px;display:flex;align-items:center;justify-content:center;gap:8px}
-.time-info{font-size:14px;color:#86efac;margin-bottom:24px}
+.period-info{font-size:16px;font-weight:bold;margin-bottom:10px;display:flex;align-items:center;justify-content:center;gap:8px;flex-wrap:wrap}
+.time-info{font-size:13px;color:#86efac;margin-bottom:20px}
 .spinner{width:60px;height:60px;border:4px solid rgba(74,222,128,.2);border-top:4px solid #4ade80;border-radius:50%;margin:0 auto 16px;animation:spin 1s linear infinite}
 @keyframes spin{to{transform:rotate(360deg)}}
 .processing-text{font-size:14px;color:#86efac;letter-spacing:2px;animation:blink 1s ease-in-out infinite}
 @keyframes blink{0%,100%{opacity:1}50%{opacity:.3}}
 .prediction-result{margin-top:24px}
-.prediction-frame{position:relative;display:inline-block;padding:24px 48px;border:3px solid;font-size:32px;font-weight:bold;letter-spacing:4px;border-radius:8px}
+.prediction-frame{position:relative;display:inline-block;padding:20px 40px;border:3px solid;font-size:28px;font-weight:bold;letter-spacing:3px;border-radius:8px;white-space:nowrap;max-width:90%;word-break:keep-all}
 .prediction-big{border-color:#86efac;color:#86efac;background:rgba(134,239,172,.1);text-shadow:0 0 20px #86efac;animation:glowBig 1.5s ease-in-out infinite}
 .prediction-small{border-color:#fde047;color:#fde047;background:rgba(253,224,71,.1);text-shadow:0 0 20px #fde047;animation:glowSmall 1.5s ease-in-out infinite}
 @keyframes glowBig{0%,100%{box-shadow:0 0 20px rgba(134,239,172,.5)}50%{box-shadow:0 0 40px rgba(134,239,172,.8)}}
@@ -387,4 +387,4 @@ periodInput.addEventListener('input',function(e){e.target.value=e.target.value.r
 setInterval(updateTime,1000);
 </script>
 </body>
-  </html>
+    </html>
