--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PREDICTION SYSTEM v2.0</title>
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Courier New',monospace;background:#000;color:#4ade80;min-height:100vh;overflow-x:hidden;position:relative}
+*{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none;user-select:none}
+body{font-family:'Courier New',monospace;background:#000;color:#4ade80;min-height:100vh;overflow-x:hidden;position:fixed;width:100%;touch-action:pan-y;overscroll-behavior:none}
 .matrix-rain{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:1;opacity:.15}
 .matrix-column{position:absolute;top:-100%;font-size:14px;line-height:18px;color:#4ade80;animation:fall linear infinite;text-shadow:0 0 8px #4ade80}
 @keyframes fall{to{top:100%}}
-.container{max-width:800px;margin:0 auto;padding:20px;position:relative;z-index:10}
+.container{max-width:800px;margin:0 auto;padding:20px;position:relative;z-index:10;height:100vh;overflow-y:auto;overflow-x:hidden;-webkit-overflow-scrolling:touch}
 .header{background:linear-gradient(135deg,rgba(74,222,128,.1) 0%,rgba(34,197,94,.05) 100%);border:2px solid #4ade80;border-radius:8px;padding:24px;margin-bottom:24px;position:relative;overflow:hidden;box-shadow:0 0 30px rgba(74,222,128,.3)}
 .header-content{display:flex;align-items:center;justify-content:space-between;margin-bottom:16px}
 .header h1{font-size:24px;text-transform:uppercase;letter-spacing:3px;text-shadow:0 0 10px #4ade80;animation:glow 2s ease-in-out infinite alternate}
@@ -24,7 +24,7 @@ body{font-family:'Courier New',monospace;background:#000;color:#4ade80;min-heigh
 .input-group{margin-bottom:16px}
 .input-label{display:block;margin-bottom:12px;font-weight:bold;font-size:14px;letter-spacing:1px}
 .input-row{display:flex;gap:12px}
-input{flex:1;padding:14px 16px;background:rgba(0,0,0,.5);border:2px solid #4ade80;color:#4ade80;font-family:'Courier New',monospace;font-size:16px;border-radius:6px;outline:none;transition:all .3s ease}
+input{flex:1;padding:14px 16px;background:rgba(0,0,0,.5);border:2px solid #4ade80;color:#4ade80;font-family:'Courier New',monospace;font-size:16px;border-radius:6px;outline:none;transition:all .3s ease;user-select:text;-webkit-user-select:text}
 input:focus{box-shadow:0 0 15px rgba(74,222,128,.5);border-color:#86efac}
 input::placeholder{color:rgba(74,222,128,.5)}
 button{padding:14px 28px;background:linear-gradient(135deg,#4ade80 0%,#22c55e 100%);border:none;color:#0a1e0a;font-family:'Courier New',monospace;font-size:14px;font-weight:bold;cursor:pointer;border-radius:6px;text-transform:uppercase;letter-spacing:1px;transition:all .3s ease;box-shadow:0 4px 15px rgba(74,222,128,.3)}
@@ -387,4 +387,4 @@ periodInput.addEventListener('input',function(e){e.target.value=e.target.value.r
 setInterval(updateTime,1000);
 </script>
 </body>
-    </html>
+</html>
